--- a/xai/demos/explainer/lime_tabular_explainer.ipynb
+++ b/xai/demos/explainer/lime_tabular_explainer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# LIME Tabular Explainer via XAI\n",
     "\n",
-    "This tutorial demonstrates how to generate explanatios using LIME's tabular explainer implemented by the XAI library.\n",
+    "This tutorial demonstrates how to generate explanations using LIME's tabular explainer implemented by the XAI library.\n",
     "\n",
     "At a high level, explanations can be obtained from any XAI explanation algorithm in 3 steps:\n",
     "\n",
