--- a/xai/demos/explainer/lime_tabular_explainer.ipynb
+++ b/xai/demos/explainer/lime_tabular_explainer.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "At a high level, explanations can be obtained from any XAI explanation algorithm in 3 steps:\n",
     "\n",
-    "* **1):** Instantiate the Explainer class, which serves as an interface between the user and each explanation algorithm\n",
-    "* **2):** Build the explainer by calling the `build_explainer` method (which is implemented by any XAI explanation algorithm) and providing arguments that are specific to that algorithm\n",
-    "* **3):** Get explanations for some data instance by calling the `explain_instance` method (which is also common among all algorithms) and provoding arguments that are specific to that algorithm"
+    "1. Instantiate the Explainer class, which serves as an interface between the user and each explanation algorithm\n",
+    "2. Build the explainer by calling the `build_explainer` method (which is implemented by any XAI explanation algorithm) and providing arguments that are specific to that algorithm\n",
+    "3. Get explanations for some data instance by calling the `explain_instance` method (which is also common among all algorithms) and provoding arguments that are specific to that algorithm"
    ]
   },
   {
@@ -45,6 +45,7 @@
     "import sys\n",
     "import random\n",
     "import numpy as np\n",
+    "from pprint import pprint\n",
     "from sklearn import datasets\n",
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -202,37 +203,52 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{0: {'confidence': 0.0,\n",
-       "  'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-       "    'score': -0.10275161028167702},\n",
-       "   {'feature': 'worst area <= 509.25', 'score': -0.09479442043867894},\n",
-       "   {'feature': 'worst radius <= 12.93', 'score': -0.060148145614287524},\n",
-       "   {'feature': 'worst texture <= 21.41', 'score': -0.057578312942073995},\n",
-       "   {'feature': 'mean area <= 419.25', 'score': -0.05598211138713413},\n",
-       "   {'feature': 'worst concave points <= 0.06', 'score': -0.05063258480760927},\n",
-       "   {'feature': 'mean texture <= 16.34', 'score': -0.042193966171229905},\n",
-       "   {'feature': 'mean concavity <= 0.03', 'score': -0.028153608385264327},\n",
-       "   {'feature': 'area error <= 18.17', 'score': -0.027911303586217028},\n",
-       "   {'feature': 'worst compactness <= 0.15', 'score': -0.024483076857988333}]},\n",
-       " 1: {'confidence': 1.0,\n",
-       "  'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-       "    'score': 0.10275161028167702},\n",
-       "   {'feature': 'worst area <= 509.25', 'score': 0.09479442043867897},\n",
-       "   {'feature': 'worst radius <= 12.93', 'score': 0.06014814561428753},\n",
-       "   {'feature': 'worst texture <= 21.41', 'score': 0.057578312942073995},\n",
-       "   {'feature': 'mean area <= 419.25', 'score': 0.05598211138713414},\n",
-       "   {'feature': 'worst concave points <= 0.06', 'score': 0.05063258480760927},\n",
-       "   {'feature': 'mean texture <= 16.34', 'score': 0.0421939661712299},\n",
-       "   {'feature': 'mean concavity <= 0.03', 'score': 0.028153608385264303},\n",
-       "   {'feature': 'area error <= 18.17', 'score': 0.027911303586217028},\n",
-       "   {'feature': 'worst compactness <= 0.15', 'score': 0.024483076857988346}]}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'confidence': 0.0,\n",
+      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "                      'score': -0.10275161028167702},\n",
+      "                     {'feature': 'worst area <= 509.25',\n",
+      "                      'score': -0.09479442043867894},\n",
+      "                     {'feature': 'worst radius <= 12.93',\n",
+      "                      'score': -0.060148145614287524},\n",
+      "                     {'feature': 'worst texture <= 21.41',\n",
+      "                      'score': -0.057578312942073995},\n",
+      "                     {'feature': 'mean area <= 419.25',\n",
+      "                      'score': -0.05598211138713413},\n",
+      "                     {'feature': 'worst concave points <= 0.06',\n",
+      "                      'score': -0.05063258480760927},\n",
+      "                     {'feature': 'mean texture <= 16.34',\n",
+      "                      'score': -0.042193966171229905},\n",
+      "                     {'feature': 'mean concavity <= 0.03',\n",
+      "                      'score': -0.028153608385264327},\n",
+      "                     {'feature': 'area error <= 18.17',\n",
+      "                      'score': -0.027911303586217028},\n",
+      "                     {'feature': 'worst compactness <= 0.15',\n",
+      "                      'score': -0.024483076857988333}]},\n",
+      " 1: {'confidence': 1.0,\n",
+      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "                      'score': 0.10275161028167702},\n",
+      "                     {'feature': 'worst area <= 509.25',\n",
+      "                      'score': 0.09479442043867897},\n",
+      "                     {'feature': 'worst radius <= 12.93',\n",
+      "                      'score': 0.06014814561428753},\n",
+      "                     {'feature': 'worst texture <= 21.41',\n",
+      "                      'score': 0.057578312942073995},\n",
+      "                     {'feature': 'mean area <= 419.25',\n",
+      "                      'score': 0.05598211138713414},\n",
+      "                     {'feature': 'worst concave points <= 0.06',\n",
+      "                      'score': 0.05063258480760927},\n",
+      "                     {'feature': 'mean texture <= 16.34',\n",
+      "                      'score': 0.0421939661712299},\n",
+      "                     {'feature': 'mean concavity <= 0.03',\n",
+      "                      'score': 0.028153608385264303},\n",
+      "                     {'feature': 'area error <= 18.17',\n",
+      "                      'score': 0.027911303586217028},\n",
+      "                     {'feature': 'worst compactness <= 0.15',\n",
+      "                      'score': 0.024483076857988346}]}}\n"
+     ]
     }
    ],
    "source": [
@@ -242,7 +258,7 @@
     "    instance=X_test[0],\n",
     "    num_features=10)\n",
     "\n",
-    "exp"
+    "pprint(exp)"
    ]
   },
   {
@@ -271,39 +287,52 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{0: {'confidence': 0.0,\n",
-       "  'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-       "    'score': -0.0988888637468886},\n",
-       "   {'feature': 'worst area <= 509.25', 'score': -0.08697607214733627},\n",
-       "   {'feature': 'mean area <= 419.25', 'score': -0.07593313480546983},\n",
-       "   {'feature': 'worst radius <= 12.93', 'score': -0.06743098333423715},\n",
-       "   {'feature': 'worst texture <= 21.41', 'score': -0.05073096916988603},\n",
-       "   {'feature': 'mean texture <= 16.34', 'score': -0.03796017799565063},\n",
-       "   {'feature': 'worst concave points <= 0.06', 'score': -0.035642798244049576},\n",
-       "   {'feature': 'area error <= 18.17', 'score': -0.02973519533368258},\n",
-       "   {'feature': '0.12 < worst smoothness <= 0.13',\n",
-       "    'score': -0.027025385756363693},\n",
-       "   {'feature': 'worst concavity <= 0.11', 'score': -0.019772658434194377}]},\n",
-       " 1: {'confidence': 1.0,\n",
-       "  'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-       "    'score': 0.0988888637468886},\n",
-       "   {'feature': 'worst area <= 509.25', 'score': 0.08697607214733628},\n",
-       "   {'feature': 'mean area <= 419.25', 'score': 0.07593313480546983},\n",
-       "   {'feature': 'worst radius <= 12.93', 'score': 0.06743098333423717},\n",
-       "   {'feature': 'worst texture <= 21.41', 'score': 0.05073096916988604},\n",
-       "   {'feature': 'mean texture <= 16.34', 'score': 0.037960177995650615},\n",
-       "   {'feature': 'worst concave points <= 0.06', 'score': 0.03564279824404958},\n",
-       "   {'feature': 'area error <= 18.17', 'score': 0.029735195333682587},\n",
-       "   {'feature': '0.12 < worst smoothness <= 0.13',\n",
-       "    'score': 0.027025385756363676},\n",
-       "   {'feature': 'worst concavity <= 0.11', 'score': 0.01977265843419438}]}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'confidence': 0.0,\n",
+      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "                      'score': -0.0988888637468886},\n",
+      "                     {'feature': 'worst area <= 509.25',\n",
+      "                      'score': -0.08697607214733627},\n",
+      "                     {'feature': 'mean area <= 419.25',\n",
+      "                      'score': -0.07593313480546983},\n",
+      "                     {'feature': 'worst radius <= 12.93',\n",
+      "                      'score': -0.06743098333423715},\n",
+      "                     {'feature': 'worst texture <= 21.41',\n",
+      "                      'score': -0.05073096916988603},\n",
+      "                     {'feature': 'mean texture <= 16.34',\n",
+      "                      'score': -0.03796017799565063},\n",
+      "                     {'feature': 'worst concave points <= 0.06',\n",
+      "                      'score': -0.035642798244049576},\n",
+      "                     {'feature': 'area error <= 18.17',\n",
+      "                      'score': -0.02973519533368258},\n",
+      "                     {'feature': '0.12 < worst smoothness <= 0.13',\n",
+      "                      'score': -0.027025385756363693},\n",
+      "                     {'feature': 'worst concavity <= 0.11',\n",
+      "                      'score': -0.019772658434194377}]},\n",
+      " 1: {'confidence': 1.0,\n",
+      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "                      'score': 0.0988888637468886},\n",
+      "                     {'feature': 'worst area <= 509.25',\n",
+      "                      'score': 0.08697607214733628},\n",
+      "                     {'feature': 'mean area <= 419.25',\n",
+      "                      'score': 0.07593313480546983},\n",
+      "                     {'feature': 'worst radius <= 12.93',\n",
+      "                      'score': 0.06743098333423717},\n",
+      "                     {'feature': 'worst texture <= 21.41',\n",
+      "                      'score': 0.05073096916988604},\n",
+      "                     {'feature': 'mean texture <= 16.34',\n",
+      "                      'score': 0.037960177995650615},\n",
+      "                     {'feature': 'worst concave points <= 0.06',\n",
+      "                      'score': 0.03564279824404958},\n",
+      "                     {'feature': 'area error <= 18.17',\n",
+      "                      'score': 0.029735195333682587},\n",
+      "                     {'feature': '0.12 < worst smoothness <= 0.13',\n",
+      "                      'score': 0.027025385756363676},\n",
+      "                     {'feature': 'worst concavity <= 0.11',\n",
+      "                      'score': 0.01977265843419438}]}}\n"
+     ]
     }
    ],
    "source": [
@@ -318,8 +347,15 @@
     "    instance=X_test[0],\n",
     "    num_features=10)\n",
     "\n",
-    "exp"
+    "pprint(exp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
