Added loading and saving

--- a/xai/demos/explainer/lime_text_explainer.ipynb
+++ b/xai/demos/explainer/lime_text_explainer.ipynb
@@ -330,6 +330,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 6: Save and load the explainer\n",
+    "\n",
+    "Like with the LIME tabular explainer, we can save and load the explainer via `load_explainer` and `save_explainer` respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the explainer somewhere\n",
+    "\n",
+    "explainer.save_explainer('artefacts/lime_text.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/i330688/venv_xai/lib/python3.6/re.py:212: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  return _compile(pattern, flags).split(string, maxsplit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label soc.religion.christian\n",
+      "{0: {'confidence': 6.798212345437472e-05,\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.002393317095822573},\n",
+      "                     {'feature': 'eternal', 'score': -0.0013269313594894295},\n",
+      "                     {'feature': 'Sin', 'score': -0.0013264176687192157},\n",
+      "                     {'feature': 'Scripture', 'score': -0.0013192950166291022},\n",
+      "                     {'feature': 'logical', 'score': -0.0012341366536975005}]},\n",
+      " 1: {'confidence': 0.00044272540371258136,\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.007634815018552455},\n",
+      "                     {'feature': 'Scripture', 'score': -0.0034759122077137384},\n",
+      "                     {'feature': 'Sin', 'score': -0.0033190824276768936},\n",
+      "                     {'feature': 'immoral', 'score': -0.003251004838219847},\n",
+      "                     {'feature': 'Heaven', 'score': -0.003229818320004681}]},\n",
+      " 2: {'confidence': 0.9994892924728337,\n",
+      "     'explanation': [{'feature': 'Bible', 'score': 0.01007923054519195},\n",
+      "                     {'feature': 'Scripture', 'score': 0.004752339637588284},\n",
+      "                     {'feature': 'eternal', 'score': 0.004605293699504958},\n",
+      "                     {'feature': 'Sin', 'score': 0.004594037307237789},\n",
+      "                     {'feature': 'Heaven', 'score': 0.004529884511827236}]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the saved explainer in a new Explainer instance\n",
+    "\n",
+    "new_explainer = Explainer(domain=xai.DOMAIN.TEXT, algorithm=xai.ALG.LIME)\n",
+    "new_explainer.load_explainer('artefacts/lime_text.pkl')\n",
+    "\n",
+    "exp = new_explainer.explain_instance(\n",
+    "    predict_fn=predict_fn,\n",
+    "    labels=[0, 1, 2],\n",
+    "    instance=raw_test.data[9],\n",
+    "    num_features=5\n",
+    ")\n",
+    "\n",
+    "print('Label', raw_train.target_names[raw_test.target[9]])\n",
+    "pprint(exp)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
