--- a/demos/explainer/lime_text_explainer.ipynb
+++ b/demos/explainer/lime_text_explainer.ipynb
@@ -51,7 +51,7 @@
     "np.random.seed(123456)\n",
     "\n",
     "# Set the path so that we can import the Explainer\n",
-    "sys.path.append('../../../')\n",
+    "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,38 +185,38 @@
      "text": [
       "Label rec.sport.baseball\n",
       "{0: {'confidence': 0.9604247937223921,\n",
-      "     'explanation': [{'feature': 'Mattingly', 'score': 0.15948847368512384},\n",
-      "                     {'feature': 'njit', 'score': -0.058093742192877086},\n",
-      "                     {'feature': 'tesla', 'score': -0.05226657434448741},\n",
-      "                     {'feature': 'luriem', 'score': 0.041491210763013854},\n",
-      "                     {'feature': 'Yankee', 'score': 0.040511388496675634},\n",
-      "                     {'feature': 'Lurie', 'score': 0.03945369764822541},\n",
-      "                     {'feature': 'Allegheny', 'score': 0.038682356052868946},\n",
-      "                     {'feature': 'PLAYERS', 'score': 0.038581528968433275},\n",
-      "                     {'feature': 'Liberalizer', 'score': 0.03748895841638309},\n",
-      "                     {'feature': 'game', 'score': 0.03528869693865674}]},\n",
+      "     'explanation': [{'feature': 'Mattingly', 'score': 0.1630204569197586},\n",
+      "                     {'feature': 'njit', 'score': -0.05400846560032084},\n",
+      "                     {'feature': 'Yankee', 'score': 0.0471284355327115},\n",
+      "                     {'feature': 'Lurie', 'score': 0.04592710278967292},\n",
+      "                     {'feature': 'PLAYERS', 'score': 0.04554150885242722},\n",
+      "                     {'feature': 'tesla', 'score': -0.045527833026026886},\n",
+      "                     {'feature': 'Allegheny', 'score': 0.0440014710417496},\n",
+      "                     {'feature': 'luriem', 'score': 0.04385267215867701},\n",
+      "                     {'feature': 'Liberalizer', 'score': 0.0424457658848723},\n",
+      "                     {'feature': 'Don', 'score': -0.030393475108189762}]},\n",
       " 1: {'confidence': 0.015984823571617023,\n",
-      "     'explanation': [{'feature': 'Mattingly', 'score': -0.05353213121137752},\n",
-      "                     {'feature': 'game', 'score': -0.020368749602553103},\n",
-      "                     {'feature': 'alleg', 'score': -0.020334778105712815},\n",
-      "                     {'feature': 'luriem', 'score': -0.020276881922028343},\n",
-      "                     {'feature': 'Allegheny', 'score': -0.020143796500731833},\n",
-      "                     {'feature': 'Lurie', 'score': -0.01942905163460649},\n",
-      "                     {'feature': 'tesla', 'score': 0.019013647815547163},\n",
-      "                     {'feature': '1993Apr21', 'score': 0.014765042470528416},\n",
-      "                     {'feature': 'Don', 'score': 0.011774298505177761},\n",
-      "                     {'feature': 'njit', 'score': 0.011059561577016867}]},\n",
+      "     'explanation': [{'feature': 'Mattingly', 'score': -0.05443408204951865},\n",
+      "                     {'feature': 'alleg', 'score': -0.02307128133739943},\n",
+      "                     {'feature': 'Yankee', 'score': -0.020479065643154905},\n",
+      "                     {'feature': 'Allegheny', 'score': -0.019319586624860215},\n",
+      "                     {'feature': 'game', 'score': -0.01907590934188312},\n",
+      "                     {'feature': 'Lurie', 'score': -0.018232342341704733},\n",
+      "                     {'feature': 'tesla', 'score': 0.016795268385738346},\n",
+      "                     {'feature': '1993Apr21', 'score': 0.012968253445169265},\n",
+      "                     {'feature': 'Don', 'score': 0.011628382538193859},\n",
+      "                     {'feature': 'njit', 'score': 0.011514128262241137}]},\n",
       " 2: {'confidence': 0.02359038270598772,\n",
-      "     'explanation': [{'feature': 'Mattingly', 'score': -0.11742256976014134},\n",
-      "                     {'feature': 'njit', 'score': 0.03813525649028631},\n",
-      "                     {'feature': 'Lurie', 'score': -0.03323516570040962},\n",
-      "                     {'feature': 'Yankee', 'score': -0.033187550975475176},\n",
-      "                     {'feature': 'luriem', 'score': -0.03314282989117507},\n",
-      "                     {'feature': 'PLAYERS', 'score': -0.03249877037465244},\n",
-      "                     {'feature': 'Liberalizer', 'score': -0.03218640861369756},\n",
-      "                     {'feature': 'Jesus', 'score': 0.025710687209416227},\n",
-      "                     {'feature': 'christ', 'score': 0.02400315821692325},\n",
-      "                     {'feature': 'tesla', 'score': 0.022378035919519087}]}}\n"
+      "     'explanation': [{'feature': 'Mattingly', 'score': -0.11653224143274477},\n",
+      "                     {'feature': 'njit', 'score': 0.03692400104773488},\n",
+      "                     {'feature': 'PLAYERS', 'score': -0.03482527334210057},\n",
+      "                     {'feature': 'Lurie', 'score': -0.0338882975136676},\n",
+      "                     {'feature': 'Yankee', 'score': -0.03316948335767298},\n",
+      "                     {'feature': 'luriem', 'score': -0.03247421017471953},\n",
+      "                     {'feature': 'Liberalizer', 'score': -0.030798805161043094},\n",
+      "                     {'feature': 'Jesus', 'score': 0.027367258249072785},\n",
+      "                     {'feature': 'tesla', 'score': 0.022433618170210355},\n",
+      "                     {'feature': 'christ', 'score': 0.021640392067396548}]}}\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,40 +351,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/i330688/venv_xai/lib/python3.6/re.py:212: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  return _compile(pattern, flags).split(string, maxsplit)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Label soc.religion.christian\n",
       "{0: {'confidence': 6.798212345437472e-05,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': -0.002393317095822573},\n",
-      "                     {'feature': 'eternal', 'score': -0.0013269313594894295},\n",
-      "                     {'feature': 'Sin', 'score': -0.0013264176687192157},\n",
-      "                     {'feature': 'Scripture', 'score': -0.0013192950166291022},\n",
-      "                     {'feature': 'logical', 'score': -0.0012341366536975005}]},\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.0022910360850923453},\n",
+      "                     {'feature': 'Heaven', 'score': -0.0013867279097790966},\n",
+      "                     {'feature': 'babies', 'score': -0.0013482141842248725},\n",
+      "                     {'feature': 'Scripture', 'score': -0.0012967367558917539},\n",
+      "                     {'feature': 'infants', 'score': -0.0012887203369136657}]},\n",
       " 1: {'confidence': 0.00044272540371258136,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': -0.007634815018552455},\n",
-      "                     {'feature': 'Scripture', 'score': -0.0034759122077137384},\n",
-      "                     {'feature': 'Sin', 'score': -0.0033190824276768936},\n",
-      "                     {'feature': 'immoral', 'score': -0.003251004838219847},\n",
-      "                     {'feature': 'Heaven', 'score': -0.003229818320004681}]},\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.007441841401906928},\n",
+      "                     {'feature': 'Heaven', 'score': -0.003699731572404997},\n",
+      "                     {'feature': 'Scripture', 'score': -0.0034930324400726585},\n",
+      "                     {'feature': 'God', 'score': -0.0030701936621817757},\n",
+      "                     {'feature': 'doctrine', 'score': -0.0030262871362190537}]},\n",
       " 2: {'confidence': 0.9994892924728337,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': 0.01007923054519195},\n",
-      "                     {'feature': 'Scripture', 'score': 0.004752339637588284},\n",
-      "                     {'feature': 'eternal', 'score': 0.004605293699504958},\n",
-      "                     {'feature': 'Sin', 'score': 0.004594037307237789},\n",
-      "                     {'feature': 'Heaven', 'score': 0.004529884511827236}]}}\n"
+      "     'explanation': [{'feature': 'Bible', 'score': 0.009764693171821779},\n",
+      "                     {'feature': 'Heaven', 'score': 0.005105855347586751},\n",
+      "                     {'feature': 'Scripture', 'score': 0.004818017546359159},\n",
+      "                     {'feature': 'God', 'score': 0.004325649143393943},\n",
+      "                     {'feature': 'doctrine', 'score': 0.004244153519346245}]}}\n"
      ]
     }
    ],
