--- a/demos/explainer/lime_tabular_explainer.ipynb
+++ b/demos/explainer/lime_tabular_explainer.ipynb
@@ -54,7 +54,7 @@
     "np.random.seed(123456)\n",
     "\n",
     "# Set the path so that we can import the Explainer\n",
-    "sys.path.append('../../../')\n",
+    "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
