--- a/demos/explainer/shap_tabular_explainer.ipynb
+++ b/demos/explainer/shap_tabular_explainer.ipynb
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/i330688/venv_xai/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/Users/i330688/venv_xai/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "# Some auxiliary imports for the tutorial\n",
     "import sys\n",
@@ -35,7 +46,7 @@
     "np.random.seed(123456)\n",
     "\n",
     "# Set the path so that we can import the Explainer\n",
-    "sys.path.append('../../../')\n",
+    "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
@@ -186,7 +197,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baf2cd9667e6497f8cfe690262ad7a41",
+       "model_id": "c8bc4d2dc05446599e1bc8fbc30c89cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "198e86ceb202485c8d00281500138c69",
+       "model_id": "f06056592c384c65a0b2d95c6fbe3c6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
